# MurphyTechV2

./: .dockerignore  Dockerfile  Dockerfile.dev  nginx.conf  push_to_aws.sh  send_to_server.sh  supervisord.conf
client/: .gitignore  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  index.js
client/src/About/: About.js
client/src/Blog/: Blog.js
client/src/Home/: Home.css  Home.js
client/src/NavBar/: NavBar.js
server/: Cargo.toml
server/migrations/2020-01-03-004409_create_user_table/: up.sql
server/migrations/2020-12-22-023322_create_message_table/: up.sql
server/mocks/: lib.rs
server/src/: auth.rs  main.rs  models.rs  schema.rs
server/src/routes/: messages.rs
