[package]
name = "murphytech"
version = "0.1.0"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]

[lib]
name = "murphytech"
path = "src/lib.rs"

[[bin]]
name = "murphytech_server"
path = "src/main.rs"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
