[package]
name = "murphytech"
version = "0.1.0"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]

[lib]
name = "murphytech"
path = "src/lib.rs"

[[bin]]
name = "murphytech_server"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }

diesel = { version = "1.4.2", features = ["chrono"] }
dotenv = "0.15.0"
r2d2 = "^0.8"

lazy_static = "1.3.0"

rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json", "diesel_postgres_pool"] }

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"